# RDA_C_SDK_mod

./: README.md  make_deploy.sh
deploy/: Makefile
guide/: SDK_GUIDE_C.hwp
sample/: Activation.c  ActivationLeafThing.c  Attribute.c  CMakeLists.txt  Connection.c  Firmware.c  Notification.c  Registration.c  SSL.c  biot_client.properties  emulator_forTest.c  insator_server.crt.pem  sample.c  sample_application.c
sdk/: CMakeLists.txt
sdk/common/: CMakeLists.txt  IotClient_ErrCode.h  OCPTypes.h  OCPUtils.c  OCPUtils.h  sha256.c  sha256.h
sdk/iotclient/: BasicDefs.h  CMakeLists.txt  IotClient.c  IotClient.h
sdk/manager/: CMakeLists.txt  OCPAPIManager.c  OCPAPIManager.h  OCPManager.c  OCPManager.h  OCPThingManager.c  OCPThingManager.h
sdk/message/: CMakeLists.txt  OCPMessage.h  OCPMessageCompressor.c  OCPMessageCompressor.h  OCPMessageConverter.h  OCPMessageConverterDelimeter.c  OCPMessageConverterDelimeter.h  OCPMessageConverterJson.c  OCPMessageConverterJson.h
sdk/protocol/: CMakeLists.txt  OCPProtocol.h  OCPProtocolCurl.c  OCPProtocolCurl.h  OCPProtocolMqtt.c  OCPProtocolMqtt.h
sdk/security/: CMakeLists.txt  OCPSecurity.c  OCPSecurity.h
sdk/security/aes/: OCPSecurityAES.c  OCPSecurityAES.h
sdk/security/aes/tiny-aes/: aes_ocp.c  aes_ocp.h  tiny-AES-C.txt
sdk/security/base64/: b64.h  decode.c
