##### CMAKE CONFIGURATION
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT("sample" C)
MESSAGE(STATUS "\n")
MESSAGE(STATUS "BUILD START ${PROJECT_NAME}")
MESSAGE(STATUS "CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")
MESSAGE(STATUS "CMAKE_BINARY_DIR : ${CMAKE_BINARY_DIR}")
MESSAGE(STATUS "PROJECT_SOURCE_DIR : ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "PROJECT_BINARY_DIR : ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "CMAKE_INSTALL_INCLUDEDIR : ${CMAKE_INSTALL_INCLUDEDIR}")

SET(SDK_DIR ${CMAKE_SOURCE_DIR}/../sdk_out)
SET(EXTERNAL_DIR ${CMAKE_SOURCE_DIR}/../external)	

MESSAGE(STATUS "## SDK_DIR : ${SDK_DIR}")
MESSAGE(STATUS "## EXTERNAL_DIR : ${EXTERNAL_DIR}")

##### OCPSDK CONFIGURATION

### SET VERSION

### SET INCLUDE DIRECTORIES 
INCLUDE_DIRECTORIES(
	"${SDK_DIR}/include/ocp" 	
)

FIND_LIBRARY(LIB_IOTCLIENT NAMES iotclient HINTS ${SDK_DIR}/lib/ocp)
FIND_LIBRARY(LIB_ZSTD NAMES zstd HINTS /usr/local/lib)
FIND_LIBRARY(LIB_JSON NAMES jansson HINTS /usr/local/lib)
FIND_LIBRARY(LIB_MQTT NAMES paho-mqtt3as HINTS /usr/local/lib)
FIND_LIBRARY(LIB_CURL NAMES curl HINTS /usr/local/lib)
FIND_LIBRARY(LIB_SSL NAMES ssl HINTS /usr/local/lib)

SET(LIBS
	"${LIB_IOTCLIENT}"
	"${LIB_ZSTD}"
	"${LIB_JSON}"
	"${LIB_MQTT}"
	"${LIB_CURL}"
	"${LIB_SSL}"
	"pthread"
)

# OPENAPI
SET(EXAMPLES 
	Activation
	ActivationLeafThing
	Attribute
	Connection
	Firmware
	Notification
	Registration
	SSL
	#emulator_forTest
)

FOREACH(EXAMPLE ${EXAMPLES})
	ADD_EXECUTABLE(${EXAMPLE} ${EXAMPLE})
	TARGET_LINK_LIBRARIES(${EXAMPLE} ${LIBS})
ENDFOREACH()

INSTALL(FILES 
		biot_client.properties
		insator_server.crt.pem
    DESTINATION ${PROJECT_BINARY_DIR}/
)
