##### CMAKE CONFIGURATION
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT("BIOT_C_SDK" C)

MESSAGE(STATUS "\n")
MESSAGE(STATUS "BUILD START ${PROJECT_NAME}")
MESSAGE(STATUS "CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")
MESSAGE(STATUS "CMAKE_BINARY_DIR : ${CMAKE_BINARY_DIR}")
MESSAGE(STATUS "PROJECT_SOURCE_DIR : ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "PROJECT_BINARY_DIR : ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "CMAKE_INSTALL_INCLUDEDIR : ${CMAKE_INSTALL_INCLUDEDIR}")
MESSAGE(STATUS "PROCESSOR_ARCHITECTURE : ${PROCESSOR_ARCHITECTURE}")
MESSAGE(STATUS "\n")

### SET VERSION
SET(c_sdk_version_major 2)
SET(c_sdk_version_minor 9)
SET(c_sdk_version_patch 0)
SET(c_sdk_version ${c_sdk_version_major}.${c_sdk_version_minor}.${c_sdk_version_patch})
MESSAGE(STATUS "BIOT_C_SDK_VERSION : ${ocp_version}" )

### SET INCLUDE DIRECTORIES 
INCLUDE_DIRECTORIES(
	common
	manager
	message
	protocol
	security
	iotclient
)

GET_PROPERTY(IDIRS DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
FOREACH(IDIR ${IDIRS})
	MESSAGE(STATUS "INCLUDE_DIRECTORIES : '${IDIR}'")
ENDFOREACH()

### SET DIR
SET(SDK_OUTPUT_DIR ${CMAKE_BINARY_DIR})
IF(EXTERNAL)
	SET(EXTERNAL_DIR     ${EXTERNAL})
ENDIF()
MESSAGE(STATUS "SDK_OUTPUT_DIR : ${SDK_OUTPUT_DIR}")

##### ADD SUBDIRECTORY
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(message)
ADD_SUBDIRECTORY(manager)
ADD_SUBDIRECTORY(security)
ADD_SUBDIRECTORY(iotclient)

#PROTOCOOL
SET(protocol_all PROTOCOL_ALL)
SET(protocol_mqtt PROTOCOL_MQTT)
SET(protocol_curl PROTOCOL_CURL)
IF(PROTOCOL MATCHES ${protocol_mqtt})
	add_definitions(-D${protocol_mqtt})
ELSEIF(PROTOCOL MATCHES ${protocol_curl})
	add_definitions(-D${protocol_curl})
ELSEIF(NOT PROTOCOL OR PROTOCOL MATCHES ${protocol_all})
	add_definitions(-D${protocol_all})
ENDIF()
ADD_SUBDIRECTORY(protocol)

