CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

PROJECT("utils" C)
MESSAGE(STATUS "\n")
MESSAGE(STATUS "BUILD START ${PROJECT_NAME}")
MESSAGE(STATUS "PROJECT_SOURCE_DIR : ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "PROJECT_BINARY_DIR : ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")
MESSAGE(STATUS "CMAKE_BINARY_DIR : ${CMAKE_BINARY_DIR}")

INCLUDE_DIRECTORIES(
	"${CMAKE_SOURCE_DIR}/common"
)

SET(SRCS
	OCPUtils
	sha256
)

ADD_LIBRARY(utils OBJECT ${SRCS})

INSTALL(
	FILES 
			OCPTypes.h
			IotClient_ErrCode.h
    DESTINATION 
    	${SDK_OUTPUT_DIR}/include/ocp
)