CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT("message" C)
MESSAGE(STATUS "\n")
MESSAGE(STATUS "BUILD START ${PROJECT_NAME}")
MESSAGE(STATUS "PROJECT_SOURCE_DIR : ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "PROJECT_BINARY_DIR : ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")
MESSAGE(STATUS "CMAKE_BINARY_DIR : ${CMAKE_BINARY_DIR}")

INCLUDE_DIRECTORIES(
	/usr/local/include
)

SET(SRCS
	OCPMessageCompressor
	OCPMessageConverterDelimeter
	OCPMessageConverterJson
)

ADD_LIBRARY(message 
	OBJECT 
	${SRCS}
)

INSTALL(
	FILES 
		OCPMessage.h
	DESTINATION 
		${SDK_OUTPUT_DIR}/include/ocp
)
